--- a/sipxpbx/WEB-INF/park/EditParkOrbit.properties
+++ b/sipxpbx/WEB-INF/park/EditParkOrbit.properties
@@ -1,8 +1,8 @@
-title=Call Park Extension
-label.music=Background music
-label.upload=Upload music
-button.delete=Delete
-error.select=You must select an existing music-on-hold file or upload a new one.
-help.extension=The call park feature enables the transfer of calls to an extension configured on this screen.
-help.retrieve=Calls can be retrieved after parking by pressing *4 followed by the extension number.
-help.upload=Select a music file or upload new files to provide background music that is played while calls are parked.
+title=Anruf Park Erweiterung
+label.music=Hintergrund Musik
+label.upload=Upload Musik
+button.delete=L\u00F6schen
+error.select=Sie m\u00FCssen eine bereits existierende Musik-w\u00E4hrend-Warten Datei ausw\u00E4hlen, oder eine Neue hochladen.
+help.extension=Die Anruf Park Funktion macht es m\u00F6glich, Anrufe an eine Erweiterung, welche hier auf diesem Bildschirm konfiguriert wird, weiterzuleiten.
+help.retrieve=Anrufe k\u00F6nnen entgegengenommen werden, nachdem sie geparkt worden sind, indem Sie *4 dr\u00FCcken, gefolgt von der Erweiterungs Nummer.
+help.upload=W\u00E4hlen Sie eine Musikdatei aus, oder laden Sie eine Neue hoch, um Hintergrund Musik zur Verf\u00FCgung zu stellen, welche gespielt wird, w\u00E4hrend ein Gespr\u00E4ch geparkt wird.
