--- a/sipxpbx/WEB-INF/park/ListParkOrbits.properties
+++ b/sipxpbx/WEB-INF/park/ListParkOrbits.properties
@@ -1,10 +1,10 @@
-title=Call Park
-enabled=Enabled
-extension=Extension
-music=Background Music
+title=Anruf Parken
+enabled=Aktiviert
+extension=Erweiterung
+music=Hintergrund Musik
 link.defaults=Defaults
-link.add=Add Call Park Extension
-confirm.delete=Are you sure you want to delete selected call park extension?
+link.add=F\u00FCgen Sie Anruf Park Erweiterung hinzu
+confirm.delete=Sind Sie sicher, dass Sie die ausgew\u00E4hlte Anruf Park Erweiterung l\u00F6schen wollen?
 tab.orbits=Park Orbits
-tab.settings=Settings
-quick.help=The call park feature enables the transfer of calls to an extension. Calls can be retrieved after parking by pressing *4 followed by the extension number. 
+tab.settings=Einstellungen
+quick.help=Die Anruf Park Funktion erlaubt die Weiterleitung von Anrufen an eine Erweiterung. Anrufe k\u00F6nnen entgegengenommen werden, nachdem sie geparkt worden sind, indem Sie *4 dr\u00FCcken, gefolgt von der Erweiterungs Nummer. 
