--- a/sipxpbx/WEB-INF/phone/PhoneModels.properties
+++ b/sipxpbx/WEB-INF/phone/PhoneModels.properties
@@ -1,3 +1,3 @@
-title=Phone Models
-editGroup=Edit Group
-selectPhoneModels=Select from any of the following phone models.
+title=Telefon Modelle
+editGroup=Bearbeite Gruppe
+selectPhoneModels=W\u00E4hlen Sie eines der folgenden Telefon Modelle aus.
