--- a/sipxpbx/WEB-INF/plugin/InternalPlugins.properties
+++ b/sipxpbx/WEB-INF/plugin/InternalPlugins.properties
@@ -3,37 +3,37 @@ menu.mwi.featureMenu=MWI
 menu.registrar.featureMenu=SIP Registrar
 menu.ivr.featureMenu=Voicemail
 menu.websocket.featureMenu=Event Notifier
-menu.park.featureMenu=Call Park
-menu.paging.featureMenu=Paging Groups
+menu.park.featureMenu=Anruf Parken
+menu.paging.featureMenu=Paging Gruppen
 menu.nat.featureMenu=NAT Traversal
-menu.freeswitch.featureMenu=Media Services
+menu.freeswitch.featureMenu=Medien Services
 menu.dns.featureMenu=DNS
 menu.imbot.featureMenu=My Buddy
 menu.acdPresence=Agent Status
 menu.acd=ACD
-menu.acdHistory=ACD Reports
-menu.conferenceBridge=Conferencing
-menu.huntGroups=Hunt Groups
+menu.acdHistory=ACD Reporte
+menu.conferenceBridge=Konferenzen
+menu.huntGroups=Hunt Gruppen
 menu.natTraversal=NAT Traversal
 menu.instantMessaging=Instant Messaging
 menu.intercom=Intercom
-menu.musicOnHold=Music on Hold
-menu.openAcd=Contact Center
-menu.authcodes=Authorization Codes
-menu.attendants=Auto Attendants
-menu.cdr=Call Detail Records
-menu.registrations=Registrations
-menu.phonebook=Phonebooks
-menu.sbcStats=SIP Trunk SBC Statistics
+menu.musicOnHold=Musik bei Halten
+menu.openAcd=Kontakt Center
+menu.authcodes=Authorisierungs Codes
+menu.attendants=Auto Begleiter
+menu.cdr=Anruf Detail Aufzeichnungen
+menu.registrations=Registrationen
+menu.phonebook=Telefonb\u00FCcher
+menu.sbcStats=SIP Trunk SBC Statistiken
 menu.restServer.featureMenu=Rest Server
 menu.sipxcdr.featureMenu=CDR
 menu.firewall.featureMenu=Firewall
 menu.dhcpd.featureMenu=DHCP
-menu.tunnel.featureMenu=Communication Encryption
-menu.sipxsqa.featureMenu=Network Queue 
+menu.tunnel.featureMenu=Kommunikations Verschl\u00FCsselung
+menu.sipxsqa.featureMenu=Netzwerk Warteschlange 
 menu.rls.featureMenu=RLS
 menu.saa.featureMenu=SAA/BLA 
 menu.logwatcher.featureMenu=Log Watcher
-menu.restore=Restore
+menu.restore=Wiederherstellen
 menu.backup=Backup
 menu.snmp=SNMP
