--- a/sipxpbx/WEB-INF/proxy/EditProxy.properties
+++ b/sipxpbx/WEB-INF/proxy/EditProxy.properties
@@ -1,1 +1,1 @@
-quick.help=The SIP Proxy service dispatches all incoming and outgoing SIP traffic. One SIP Proxy service is required per server
+quick.help=Der SIP Proxy service fertigt allesn eingehenden und ausgehenden SIP Traffic ab. Ein SIP Proxy Service wird pro Server benötigt.
