--- a/sipxpbx/WEB-INF/proxy/EditProxy.properties
+++ b/sipxpbx/WEB-INF/proxy/EditProxy.properties
@@ -1,1 +1,1 @@
-quick.help=Der SIP Proxy service fertigt allesn eingehenden und ausgehenden SIP Traffic ab. Ein SIP Proxy Service wird pro Server benötigt.
+quick.help=Der SIP Proxy Service fertigt allen eingehenden und ausgehenden SIP Traffic ab. Ein SIP Proxy Service wird pro Server ben\u00F6tigt.
