--- a/sipxpbx/WEB-INF/registrar/EditRegistrar.properties
+++ b/sipxpbx/WEB-INF/registrar/EditRegistrar.properties
@@ -1,1 +1,1 @@
-quick.help=Keeps track of current user registrations and performs call pickup functions. One registrar is required per server.
+quick.help=Verfolgt die laufenden Benutzer Registrationen und wickelt Anruf Entgegennahme Funktionen ab. Ein Registrar wird pro Server ben\u00F6tigt.
