--- a/sipxpbx/WEB-INF/restServer/EditRestServer.properties
+++ b/sipxpbx/WEB-INF/restServer/EditRestServer.properties
@@ -1,1 +1,1 @@
-quick.help=The REST API service provides an application programming interface for developers to interact with that allows functions such as call control, user creation, etc. Only one REST API service is allowed per cluster and is an optional service.
+quick.help=Der REST API Service bietet eine Programmieroberfl\u00E4che für Entwickler um mit Funktionen zu interagieren, wie zum Beispiel Anruf Kontrolle, Benutzer Erstellung, usw. Nur ein REST API Service ist per Cluster erlaubt und ist ein optionaler Service.
