--- a/sipxpbx/WEB-INF/rls/EditRls.properties
+++ b/sipxpbx/WEB-INF/rls/EditRls.properties
@@ -1,1 +1,1 @@
-quick.help=Resource List Server allows end points to monitor the status of other end points.
+quick.help=Der Ressourcen List Server erlaubt Endpunkten den Status anderer Endpunkte zu verfolgen.
