--- a/sipxpbx/WEB-INF/saa/EditSaa.properties
+++ b/sipxpbx/WEB-INF/saa/EditSaa.properties
@@ -1,2 +1,2 @@
-quick.help=The Shared Appearance Agent(SAA) service, also known as Bridged Line Appearance(BLA) or Shared Line Appearance (SLA). \
-Only one SAA/BLA service is allowed per cluster and is an optional service.
+quick.help=Der Shared Appearance Agent(SAA) Service, auch bekannt unter Bridged Line Appearance(BLA) oder Shared Line Appearance (SLA). \
+Nur ein SAA/BLA Service ist erlaubt pro Cluster und ist ein optionaler Service.
