--- a/sipxpbx/WEB-INF/snmp/Snmp.properties
+++ b/sipxpbx/WEB-INF/snmp/Snmp.properties
@@ -1,1 +1,1 @@
-quick.help=SNMP server reports the status of running processes and other server statistics. When enabled, each server will run snmpd service.
+quick.help=Der SNMP Server berichtet den Status aller laufenden Prozesse und andere Server Statistiken. Falls aktiviert, l\u00E4uft der SNMP Service auf jedem Server.
