--- a/sipxpbx/WEB-INF/tunnel/EditTunnel.properties
+++ b/sipxpbx/WEB-INF/tunnel/EditTunnel.properties
@@ -1,1 +1,1 @@
-quick.help=Encryption of relevant communication between servers in your cluster.
+quick.help=Verschl\u00FCsselung von relevanter Kommunikation zwischen den Servern in Ihrem Cluster.
