--- a/sipxpbx/WEB-INF/user/Avatar.properties
+++ b/sipxpbx/WEB-INF/user/Avatar.properties
@@ -1,6 +1,6 @@
 uploadAvatar=Upload
 button.upload=Upload
-button.extUse=Save
-label.useExtAvatar=Use External Image
+button.extUse=Sichere
+label.useExtAvatar=Benutze externe Datei
 label.extAvatar=URL
-button.delete=Remove
+button.delete=Entferne
