--- a/sipxpbx/WEB-INF/openacd/OpenAcdServerPage.properties
+++ b/sipxpbx/WEB-INF/openacd/OpenAcdServerPage.properties
@@ -1,50 +1,50 @@
-title=Contact Center
+title=Kontakt Center
 tab.clients=Clients
 tab.lines=Lines
-tab.queueGroups=Queue Groups
-tab.queues=Queues
-tab.agentGroups=Agent Groups
+tab.queueGroups=Warteschlangen Gruppen
+tab.queues=Warteschlangen
+tab.agentGroups=Agent Gruppen
 tab.agents=Agents
 tab.releaseCodes=Release Codes
-tab.skillGroups=Skill Groups
-tab.skills=Skills
-tab.commands=Agent Dial Strings
-tab.settings=Settings
-quick.help.clients=The contact center allows receiving messages on behalf of several clients. \
-  Each client is identified so that agents know who the call is for. For each client one or several incoming lines are defined. \
-  Calls for several clients can be routed to the same or different queues. Priority routing for a client is defined in the queue recipe.
-quick.help.lines=A line is attached to a queue and delivers incoming calls. \
-  It has an internal extension, and optional DID number and alias assigned. A queue can have several lines assigned.
-quick.help.queueGroups=A queue group contains a set of skill requirements that is applied to each media (call, email, voicemail) \
-  placed in a queue that is a member of the group. <br/>\
-  The default queue group cannot be deleted or renamed.
-quick.help.queues=Media (calls, email, voicemail) enter a queue and are routed to an agent based on matching skills requirements  \
-  with skills provided by agents, and based on priority and other criteria assigned to media through a queue's recipe. <br/>\
-  The default queue cannot be deleted or renamed.
-quick.help.agentGroups=An Agent Group contains a list of skills. Each agent that is a member of the group will inherit the skills. <br/>\
-  The default agent group cannot be deleted or renamed.<br/><br/>\
-  <b>WARNING: Deleting an agent group will delete all agents in that group. If this is not intended move the agents in another group \
-  before deleting the group.</b>
-quick.help.agents=Media (calls, email, voicemail) is routed to agents based on different criteria, \
-  including matching skills requirements with skills provided, priority, and other criteria defined in a queue's recipe. \
-  Agents that provide fewer skills are more often selected.
-quick.help.releaseCodes=When an agent wants to go released , \
-  they can choose any option you define here, as well as the ever present "Default". \
-  The bias is either negative, neutral, or positive to represent costing money, neutral, or earning money respectively. \
-  The bias is not displayed to agents, and is primarily useful for reporting.
-quick.help.skillGroups=Skill groups allow grouping of skill requirements requested by media, \
-  or skills provided by agents for easy reference during queue or agent configuration.
-quick.help.skills=A skill is an attribute or capability of an agent, or a requirement requested by media. \
-  Custom skills can be defined in addition to system skills.<br/><br/> \
-  Magic skills are system skills that cannot be added, changed or deleted. \
-  A magic skill either has some special meaning, or is expanded under certain circumstances to a more specific value. \
-  Magic skills are very powerful and include: <br/>\
-  <b>Brand</b>: When applied to a media it expands to the client ID associated with that media. <br/>\
-  <b>Agent Name</b>: When applied to an agent it expands to the agent's login name. <br/>\
-  <b>Agent Profile</b>: When applied to an agent it expands to the agent's profile name. <br/>\
-  <b>Node</b>:  When applied to an agent or media it expands to the node. <br/>\
-  <b>Queue</b>: When applied to a media currently in a queue it expands to the queue name. <br/>\
-  <b>All</b>: When assigned to an agent that agent can service any media regardless of what skills that media requires. \
-  When assigned to a media that media is serviceable by any agent regardless of agent skills
-quick.help.commands=Special dial strings can be used to allow agents to perform actions from the telephone. <br/>\
-  Default actions provided include login, go available, go released, and logout. Additional actions can be defined.
+tab.skillGroups=F\u00E4higkeiten Gruppen
+tab.skills=F\u00E4higkeiten
+tab.commands=Agent Wahl Strings
+tab.settings=Einstellungen
+quick.help.clients=Das Kontakt Center erlaubt das Empfangen von Nahrichten im Auftrag mehrerer Clients. \
+  Jeder Client wird identifiziert, so dass Agents wissen, f\u00FCr wen der Anruf ist. F\u00FCr jeden Client sind eine oder mehrere Lines definiert. \
+  Anrufe f\u00FCr mehrere Clients k\u00F6nnen in die gleiche oder unterschiedliche Warteschlangen geleitet werden. Priorit\u00E4t des Routings wird in der Warteschlangen Seite definiert.
+quick.help.lines=Eine Line wird einer Warteschlange zugewiesen und \u00FCberliefert eingehende Anrufe. \
+  Sie hat eine interne Erweiterung und optionale DID Nummer und einen Alias zugewiesen. Eine Warteschlange kann mehrere Lines zugewiesen haben.
+quick.help.queueGroups=Eine Warteschlangen Gruppe hat eine Liste von F\u00E4higkeiten Voraussetzungen, welche auf alle Medien (Anruf, E-Mail, Voicemail), die in einer Warteschlange, \
+  die Mitglied dieser Gruppe ist, angewandt wird. <br/>\
+  Die default Warteschlangen Gruppe kann nicht gel\u00F6scht oder umbenannt werden.
+quick.help.queues=Medien (Anrufe, E-Mail, Voicemail) betreten eine Warteschlange und werden an einen Agent weitergeleitet, basierend auf \u00FCbereinstimmenden F\u00E4higkeits Voraussetzungen,  \
+  die der Agent angibt und basieren auf Priorit\u00E4t und anderen Kriterien, die den Medien durch die Warteschlange zugewiesen werden. <br/>\
+  Die default Warteschlange kann nicht gel\u00F6scht oder umbenannt werden.
+quick.help.agentGroups=Eine Agent Gruppe enth\u00E4lt eine Liste an F\u00E4higkeiten. Jeder Agent, der Mitglied dieser Gruppe ist, wird diese F\u00E4higkeiten erben. <br/>\
+  Die default Agent Gruppe kann nicht gel\u00F6scht oder umbenannt werden.<br/><br/>\
+  <b>WARNUNG: Eine Agent Gruppe zu l\u00F6schen, l\u00F6scht automatisch alle Agents in dieser Gruppe. Falls dies nicht gew\u00FCnscht wird, verschieben Sie die Agents in eine \
+  andere Gruppe, bevor Sie diese l\u00F6schen.</b>
+quick.help.agents=Medien (Anrufe, E-Mail, Voicemail) werden an Agents weitergeleitet, basierend auf verschiedenen Kriterien, \
+  ebenso werden F\u00E4higkeits Voraussetzungen mit den F\u00E4higkeiten, die angegeben wurden, verglichen und anderen Kriterien, die auf der Warteschlangen Seite definiert wurden. \
+  Agents, die weniger F\u00E4higkeiten angeben, werden \u00F6fter ausgew\u00E4hlt.
+quick.help.releaseCodes=Wenn ein Agent freigegeben werden will, \
+  kann dieser jede Option ausw\u00E4hlen, die Sie hier definieren, genauso wie den immer ausw\u00E4hlbaren Status "Default". \
+  Die Ausrichtung ist entweder Negativ, Neutral, oder Positiv um zu veranschaulichen, kostet Geld, Neutral oder verdient Geld. \
+  Die Ausrichtung wird den Agents nicht angezeigt und ist haupts\u00E4chlich n\u00FCtzlich für Auswertungen.
+quick.help.skillGroups=F\u00E4higkeiten Gruppen erlauben das Gruppieren von F\u00E4higkeits Vorausetzungen, die von Medien angefordert werden, \
+  oder F\u00E4higkeiten, die von den Agents angegeben werden f\u00FCr einen einfachen Nachweis w\u00E4hrend Warteschlangen-, oder Agent Konfiguration.
+quick.help.skills=Eine F\u00E4higkeit ist eine Eigenschaft oder Begabung eines Agents, oder eine Voraussetzung, die von Medien gefordert wird. \
+  Individuelle F\u00E4higkeiten k\u00F6nnen zus\u00E4tzlich zu System F\u00E4higkeiten definiert werden.<br/><br/> \
+  Magic F\u00E4higkeiten sind System F\u00E4higkeiten, welche nicht hinzugef\u00FCgt, ge\u00E4ndert oder gel\u00F6scht werden k\u00F6nnen. \
+  Eine Magic F\u00E4higkeit hat entweder eine spezielle Bedeutung, oder wird unter bestimmten Umst\u00E4nden genauer spezifiziert. \
+  Magic F\u00E4higkeiten sind sehr stark und umfassen: <br/>\
+  <b>Marke</b>: Wenn Medien zugewiesen, erstreckt es sich auf die Client ID, die mit diesem Medium verkn\u00FCpft ist. <br/>\
+  <b>Agent Name</b>: Wenn einem Agent zugewiesen, erstreckt es sich auf den Login Namen des Agents. <br/>\
+  <b>Agent Profil</b>: Wenn einem Agent zugewiesen, erstrekt es sich auf den Profil Namen des Agents. <br/>\
+  <b>Node</b>:  Wenn einem Agent oder Medium zugewiesen, erstreckt es sich auf den Node. <br/>\
+  <b>Warteschlange</b>: Wenn Medien zugewiesen, die sich momentan in der Warteschlange befinden, erstreckt es sich auf den Warteschlangen Namen. <br/>\
+  <b>Alle</b>: Wenn einem Agent zugewiesen, kann der Agent alle Medien bedienen, egal welche F\u00E4higkeiten die Medien erfordern. \
+  Wenn Medien zugewiesen, ist dieses Medium von jedem Agent bedienbar, egal welche F\u00E4higkeiten der Agent besitzt.
+quick.help.commands=Spezielle Wahlfolgen k\u00F6nnen dazu benutzt werden um Aktionen vom Telefon aus auszul\u00F6sen. <br/>\
+  Default Aktionen sind Login, Verf\u00FCgbar gehen, Abwesend gehen und Logout. Weitere Aktionen k\u00F6nnen definiert werden.
