--- a/sipxpbx/WEB-INF/openacd/EditOpenAcdQueuePage.properties
+++ b/sipxpbx/WEB-INF/openacd/EditOpenAcdQueuePage.properties
@@ -1,27 +1,27 @@
-title=Contact Center Queue
-label.name=Queue Name
-label.description=Description
-label.queueGroup=Queue Group
-label.weight=Weight
-description.queueGroup=Select a queue group which will contains this queue
-description.weight=A queue with a higher weight is likely to be serviced first then a queue with a lower weight
-blank.queueName.error=You must enter a value for Queue Name.
-duplicate.queueName.error=A queue with this name is already defined.
-error.requiredQueueGroup=You must select a queue group.
-label.inherited.skills=Skills inherited from queue group:
-label.inherited.recipes=Recipe inherited from queue group:
-msg.err.defaultQueueRename=The default queue cannot be renamed!
-msg.err.queueRename=Renaming of the queue is disabled.
-link.skillsPage=Skills
-quick.help=Select the skill requirements that will be assigned to media (call, email, voicemail) when it enters the queue. \
-  Selected skill requirements are merged with the queue group's skill requirements. <br/> \
-  Additional skill requirements can be defined on the Skills page.<br/>\<br/>\
-  Several queues can be defined for the contact center with agents receiving calls from all queues, \
-  except if agents only provide specific queue skills. Factors considered for call routing and wait time include queue weight, \
-  priority assigned to the media, time since queue was serviced last, specificity of skills required where calls with lower skill requirements \
-  are typically serviced first, and total time in queue. \
-  Tuning contact center performance might require some experimenting with the different factors involved.<br/>\<br/>\
-  Frequency of a recipe step can be <em>Run Once</em> or <em>Run Many</em>. \
-  If a recipe step is set to <em>Run Once</em>, after the step actions are performed, it is removed from the recipe for that media. \
-  If it is set to <em>Run Many</em>, each time the conditions are met, the actions will perform each time the conditions are evaluated.<br/>\<br/>\
-  Note that renaming of the queue has been disabled.
+title=Kontakt Center Warteschlange
+label.name=Warteschlange Name
+label.description=Beschreibung
+label.queueGroup=Warteschlangen Gruppe
+label.weight=Gewicht
+description.queueGroup=W\u00E4hlen Sie eine Gruppe aus, welche die Warteschlange enthalten wird
+description.weight=Eine Warteschlange mit h\u00F6herem Gewicht wird wahrscheinlich schneller bedient als eine mit geringerem
+blank.queueName.error=Sie m\u00FCssen einen Wert eingeben f\u00FCr Warteschlangen Name.
+duplicate.queueName.error=Eine Warteschlange mit diesem Namen ist bereits definiert.
+error.requiredQueueGroup=Sie m\u00FCssen eine Warteschlangen Gruppe ausw\u00E4hlen.
+label.inherited.skills=F\u00E4higkeiten, von Warteschlangen Gruppe vererbt:
+label.inherited.recipes=Recipe vererbt von Warteschlangen Gruppe:
+msg.err.defaultQueueRename=Die default Warteschlange kann nicht umbenannt werden!
+msg.err.queueRename=Umbenennen der Warteschlange ist deaktiviert.
+link.skillsPage=F\u00E4higkeiten
+quick.help=W\u00E4hlen Sie die Fertigkeits Voraussetzungen aus, welche Medien (Anruf, E-Mail, Voicemail) zugewiesen werden, wenn diese die Warteschlange betreten. \
+  Die ausgew\u00E4hlten F\u00E4higkeits Voraussetzungen werden mit den F\u00E4higkeits Voraussetzungen der Warteschlangen Gruppe vereint. <br/> \
+  Zusätzliche F\u00E4higkeits Voraussetzungen k\u00F6nnen auf der F\u00E4higkeits Seite definiert werden.<br/>\<br/>\
+  Mehrere Warteschlangen k\u00F6nnen für das Kontakt Center mit Agenten definiert werden, die Anrufe aus allen Warteschlangen erhalten, \
+  ausgenommen falls Agents nur spezifische Warteschlangen F\u00E4higkeiten angeben. Faktoren, die bei der Anrufweiterleitung und der Wartezeit eine Rolle spielen, sind: \
+  Warteschlangen Gewicht, die den Medien zugewiesene Priorit\u00E4t, Zeit die vergangen ist seit die Warteschlange zuletzt bedient wurde, die Art der ben\u00F6tigten F\u00E4higkeiten, wobei \
+  Anrufe mit niedrigeren F\u00E4higkeits Anforderungen normalerweise zuerst bedient werden und die gesamte Zeit in der Warteschlange. \
+  Die Feinabstimmung der Kontakt Center Performance setzt m\u00F6glicherweise einige Erfahrung mit den Faktoren, die involviert sind, voraus.<br/>\<br/>\
+  Die Frequenz eines Recipe Schrittes kann sein:<em>F\u00FChre einmal aus</em> oder <em>F\u00FChre \u00F6fter aus</em>. \
+  Falls ein Anweisungsschritt auf <em>F\u00FChre einmal aus</em> gesetzt ist, wird die Anweisung nachdem die Schritte unternommen worden sind von diesem Medium entfernt. \
+  Falls diese auf <em>F\u00FChre \u00F6fter aus</em> gesetzt ist, wird jedes mal, wenn die Voraussetzung erf\u00FCllt ist, diese Aktion ausgef\u00FChrt werden.<br/>\<br/>\
+  Nehmen Sie zur Kenntnis, dass das Umbenennen der Warteschlange deaktiviert worden ist.
