--- a/sipxpbx/WEB-INF/nat/EditNatTraversal.properties
+++ b/sipxpbx/WEB-INF/nat/EditNatTraversal.properties
@@ -1,22 +1,22 @@
 title=NAT Traversal
-tab.locations=Server Config
-tab.settings=Settings
-error.startEndRtp=Start RTP port is higher than end RTP port
-button.activate=Apply
-help.natTraversal=The NAT Traversal feature makes it possible to communicate with remote users and endpoints \
-that are behind near-end and far-end NATs. In addition, it is possible to \
-setup a multi-branch configuration over a public network using standard firewalls. <BR>\
-Whenever it is detected that the two endpoints that are starting a media session are separated by \
-one or more NATs, the server will insert its Media Relay into the media path. \
-The NAT traversal feature supports full cone, restricted cone, port restricted cone as well as symmetric NATs.<p> \
-In order to change the network topology (intranet domains and subnets) please visit the \
-Internet Calling page.
+tab.locations=Server Konfiguration
+tab.settings=Einstellungen
+error.startEndRtp=Der Start RTP Port ist h\u00F6her als der End RTP Port
+button.activate=\u00FCbernehme
+help.natTraversal=Die NAT Traversal Funktion macht es m\u00F6glich mit Remote Benutzern und Endpunkten zu kommunizieren, \
+welche sich hinter Near-End und Far-End NATs befinden. Zus\u00E4tzlich ist es m\u00F6glich, \
+eine multi-branch Konfiguration \u00FCber ein \u00F6ffentliches Netzwerk mit Standart Firewalls aufzusetzen. <BR>\
+Wann immer entdeckt wird, dass die zwei Endpunkte, die eine Medien Session starten, durch \
+einen oder mehrere NATs getrennt sind, wird der Server sein Medien Relay in den Medienpfad einsetzen. \
+Die NAT Traversal Funktion unterst\u00FCtzt full cone, restricted cone, port restricted cone genauso wie symmetrische NATs.<p> \
+Um die Netzwerk Topologie (Intranet Domains und Subnets) zu \u00E4ndern, besuchen Sie bitte die \
+Internet Aufruf Seite.
 label.jobStatus=Job Status
-address=IP Address
-natConfig=NAT Config
+address=IP Addresse
+natConfig=NAT Konfiguration
 publicPort=SIP Port
 publicTlsPort=TLS SIP Port
-label.publicIp=Public IP Address
-label.stunServer=Use STUN server
-label.internetcalling=Internet Calling
-quick.help=Edit NAT configuration for each configured server
+label.publicIp=Public IP Addresse
+label.stunServer=Benutze STUN Server
+label.internetcalling=Internet Anruf
+quick.help=Bearbeiten Sie die NAT Konfiguration für jeden Server
