--- a/sipxpbx/WEB-INF/dns/DnsTest.properties
+++ b/sipxpbx/WEB-INF/dns/DnsTest.properties
@@ -1,48 +1,48 @@
-title=DNS Advisor
-quick.help=This page provides some guidance to network administrators in how to configure an external DNS server for sipXecs purposes.\
-The script will analyse the current DNS entries and suggest correction if necessary.\
-<br/><br/>For configuring a MS Windows DNS Server please click the "Detailed Help" link.\
-<br/><br/><strong>Please note that DNS test will always fail on Windows DNS due to missing NAPTR records.</strong>
+title=DNS Helfer
+quick.help=Diese Seite bietet einige Unterst\u00FCtzung f\u00FCr Netzwerk Administratoren wie ein externer DNS Server f\u00FCr sipxecs Nutzen konfiguriert wird.\
+Das Script wird den momentanen DNS Eintrag analysieren und Verbesserungen vorschlagen, falls notwendig.\
+<br/><br/>Um einen MS Windows DNS Server zu konfigurieren, klicken Sie bitte auf den "Detailierte Hilfe" Link\
+<br/><br/><strong>Bitte nehmen Sie zur Kenntnis, dass der DNS Test bei Windows DNS immer fehlschlagen wird, aufgrund fehlender NAPTR Eintr\u00E4gen.</strong>
 label.dnsServer=DNS Server
-description.dnsServer=IP address of DNS server to query for required records.
-validationDns.labelSuccess=DNS Configuration is valid
-button.runtest=Run DNS Advisor
-toggle.showDetailedHelp=Show Detailed Help
-toggle.hideDetailedHelp=Hide Detailed Help
-detailedHelp=Using DNS Advisor you can natively take the output into a Linux server.\n\
-	For Windows DNS you can use the output of DNS Advisor to configure DNS properly. The following is a guideline to assist with Windows:\n\
-	1. In Administrative Tools and DNS\n\
-	2. In the left-hand pane, single-left-click on the domain (under the Forward Lookup Zones into which the system will be installed.\n\
-	3. To add an A record Right-click on the domain and select New Host (A).\n\
-	4. In the dialogue box that appears, enter the name of the server (the fully qualified domain name field will populate automatically)\n\
-	and its IP address, and then click Add Host then Done.\n\
-	5. The newly added A Record is displayed in the right-hand pane along with any other records already configured.\n\
-	6. For SRV records do the following:\n\
-	7. Right-click on the target domain in the left-hand pane and select Other New Records.\n\
-	8. In the window that opens, scroll down the list and select Service Location (SRV) and then click on Create Record.\n\
-	9. Enter the following values:\n\
-		Service - enter _sip\n\
-		Protocol - enter _udp or _tcp based on DNS advisor\n\
-		Priority - taken from DNS Advisor value called priority\n\
-		Weight - taken from DNS Advisor value called weight\n\
-		Port number - 5060 - taken from DNS Advisor value called port\n\
-		Host offering this service - taken from DNS Advisor value called server\n\
-	10. Click OK.\n\
-	11. For SRV RR records do the following:\n\
-	12. Right-click on the target domain in the left-hand pane and select New Domain.\n\
-	13. Name the new domain rr.servername and Click OK. Get these values from DNS advisor for each RR SRV record needed. The new sub-domain and its 'rr' folder are displayed in the left-hand pane.\n\
-	14. Right-click on the 'rr' folder of your primary server and select Other New Records. \n\
-	15. In the window that opens, scroll down the list and select Service Location (SRV) and then click on Create Record.\n\
-	16. Enter the following values:\n\
-		Service - enter _sip\n\
-		Protocol - enter _udp or _tcp based on DNS advisor\n\
-		Priority - taken from DNS Advisor value called priority\n\
-		Weight - taken from DNS Advisor value called weight\n\
-		Port number - 5070 - taken from DNS Advisor value called port\n\
-		Host offering this service - taken from DNS Advisor\n\
-	17. Click OK.\n\
-	Note:\n\
-	A records - required\n\
-	SRV records - HA requirement\n\
-	NAPTR records - Not possible in Windows DNS and not required\n
-title.detailedHelp=MS Windows DNS Server Configuration:
+description.dnsServer=IP Adresse des DNS server, welcher bei notwenigen Eintr\u00E4gen gefragt wird.
+validationDns.labelSuccess=DNS Konfiguration ist g\u00FCltig
+button.runtest=F\u00FChre den DNS Helfer aus
+toggle.showDetailedHelp=Zeige detailierte Hilfe an
+toggle.hideDetailedHelp=Verstecke detailierte Hilfe
+detailedHelp=Wenn Sie den DNS Helfer benutzen, k\u00F6nnen Sie das Ergebnis in einen Linux Server einf\u00FCgen.\n\
+	F\u00FCr Windows DNS k\u00F6nnen Sie das Ergebnis des DNS Helfers verwenden um DNS korrekt einzustellen. Folgend ist eine Anleitung, um bei Windows zu helfen:\n\
+	1. Unter Administrative Tools und DNS\n\
+	2. Im linken Fenster, einmal links klicken auf Domain (unter der Weiterleitungs Lookup Zone in die das System installiert wird).\n\
+	3. Um einen Eintrag hinzuzuf\u00FCgen, Rechtsklick auf die Domain und Neuer Host ausw\u00E4hlen (A).\n\
+	4. In der Dialog Box, die auftaucht, geben Sie bitte den Namen des Servers ein (das detailierte Domain Name Feld wird sich automatisch f\u00FCllen)\n\
+	und die IP Adesse, dann klicken Sie F\u00FCge Host hinzu und fertig.\n\
+	5. Der neu hinzugef\u00FCgte A Eintrag wird auf der rechten Seite angezeigt, zusammen mit allen anderen Eintr\u00E4gen, die bereits konfiguriert sind.\n\
+	6. Für SRV Eintr\u00E4ge, machen Sie folgendes:\n\
+	7. Rechtsklick auf die Ziel Domain im linken Fenster und w\u00E4hlen Sie anderer neuer Eintrag.\n\
+	8. In dem sich \u00F6ffnenden Fenster, scrollen Sie nach unten und w\u00E4hlen Sie Service Ort (SRV) und klicken Sie dann auf Erstelle Eintrag.\n\
+	9. Geben Sie die folgenden Werte ein:\n\
+		Service - Geben Sie _sip ein\n\
+		Protokoll - Geben Sie _udp oder _tcp auf DNS Helfer basierend ein\n\
+		Priorit\u00E4t - Nehmen Sie den DNS Helfer Wert Priorit\u00E4t genannt\n\
+		Gewicht - Nehmen Sie den DNS Helfer Wert Gewicht genannt\n\
+		Port Nummer - 5060 - Nehmen Sie den DNS Helfer Wert Port genannt\n\
+		Host der den Service anbietet - Nehmen Sie den DNS Helfer Wert Server genannt\n\
+	10. Klicken Sie OK.\n\
+	11. Für SRV RR Eintr\u00E4ge machen Sie folgendes:\n\
+	12. Rechtsklick auf die Ziel Domain im linken Fenster und w\u00E4hlen Sie Neue Domain.\n\
+	13. Nennen Sie die neue Domain rr.servername und klicken Sie OK. Nehmen Sie die Werte vom DNS Helfer f\u00FCr jeden RR SRV Eintrag, den Sie brauchen. Die neue Subdomain und ihre 'rr' Ordner werden auf der linken Seite angezeigt.\n\
+	14. Rechtsklick auf den 'rr' Ordner Ihres prim\u00E4ren Servers und w\u00E4hlen Sie andere Neue Eintr\u00E4ge. \n\
+	15. Im sich \u00F6ffnenden Fenster scrollen Sie nach unten und w\u00E4hlen Sie Service Location (SRV) und klicken Sie dann auf Erstelle Eintrag.\n\
+	16. Geben Sie folgende Werte ein:\n\
+		Service - Geben Sie _sip ein\n\
+		Protokoll - Geben Sie _udp oder _tcp auf DNS Helfer basierend ein\n\
+		Priorit\u00E4t - Nehmen Sie den DNS Helfer Wert Priorit\u00E4t genannt\n\
+		Gewicht - Nehmen Sie den DNS Helfer Wert Gewicht genannt\n\
+		Port Nummer - 5070 - Nehmen Sie den DNS Helfer Wert Port genannt\n\
+		Host der den Service anbietet - Nehmen Sie den DNS Helfer Wert Server genannt\n\
+	17. Klicken Sie OK.\n\
+	Hinweis:\n\
+	A Eintr\u00E4ge - N\u00F6tig\n\
+	SRV Eintr\u00E4ge - HA Voraussetzung\n\
+	NAPTR Eintr\u00E4ge - Nicht m\u00F6glich in Windows DNS und nicht n\u00F6tig\n
+title.detailedHelp=MS Windows DNS Server Konfiguration:
