--- a/sipxpbx/backup/backup.properties
+++ b/sipxpbx/backup/backup.properties
@@ -1,25 +1,25 @@
 ftp.label=FTP
-ftp.url.label=FTP connection URL
-ftp.url.description= Connection URL including optional path.  Example sftp://ftp.example.org/backups.  URL should not include user name or password. \  
- It can contain port if it's not the standard port number for FTP or Secure FTP.
-ftp.user.label=User name
-ftp.password.label=Password 
-backup.label=Backup Generic Settings
-backup.device.label=Include Device Files
-backup.device.description=Do not add uploaded device files into backup, otherwise your backup may get too big
-restore.keepDomain.label=Keep existing SIP domain name
-restore.keepDomain.description=Keep existing SIP domain name from the system you're restoring into, not the domain name from the backup.
-restore.keepFqdn.label=Keep existing host name
-restore.keepFqdn.description=Keep existing fully qualified domain name from the system you're restoring into, not the host name from the backup.
-restore.decodePins.label=Decode PINs
-restore.decodePins.description=When restoring from version 4.4 or older, login and voice mail PINs will not \
- work because PINs are encrypted using a one-way hash algorithm that include the SIP domain. If you enable this option an \
- attempt will be make an attempt to decrypt the PIN and preserve the user's original value. This will not work for PINs of a certain length \
- (length specified below) or PINs that include non-numeric values.
-restore.decodePinMaxLen.label=Decode PINs of certain length
-restore.decodePinMaxLen.description=When decoding PINs, only attempt for PINs less then this length. NOTE: values beyond 4 can take \
- considerable time to migrate depending on the CPU available and number of users.   
-restore.resetPin.label=Reset Voicemail PINs
-restore.resetPin.description=Enable this if you want to restore and reset all voice mail PINs at the same time. PIN must be 4 characters or longer and most useful as numbers 0-9.
-restore.resetPassword.label=Reset passwords
-restore.resetPassword.description=Enable this if you want to restore and reset all user portal/IM/call center passwords at the same time. Password must be 8 characters or longer.
+ftp.url.label=FTP Verbindungs URL
+ftp.url.description=Verbindungs URL inklusive optionalem Pfad. Beispiel sftp://ftp.example.org/backups. URL sollte Benutzername und Passwort nicht enthalten. \  
+ Sie kann den Port enthalten, falls es nicht der Standart FTP oder SFTP Port ist.
+ftp.user.label=Benutzer Name
+ftp.password.label=Passwort 
+backup.label=Backup Einstellungen
+backup.device.label=Schließe Ger\u00E4t Dateien mit ein
+backup.device.description=F\u00FCgen Sie hochgeladene Ger\u00E4te Dateien nicht ins Backup ein, da es sonst zu groß wird
+restore.keepDomain.label=Behalte existierenden SIP Domain Namen
+restore.keepDomain.description=Behalte den existierenden SIP Domain Name des Systems in das Sie wiederherstellen, nicht den Domain Namen des Backups.
+restore.keepFqdn.label=Behalte existierenden Host Namen
+restore.keepFqdn.description=Behalte ausf\u00FChrlichen Domain Namen des Systems in welches Sie wiederherstellen, nicht den Host Namen des Bakups.
+restore.decodePins.label=Dekodiere PINs
+restore.decodePins.description=Wenn Sie von Version 4.4 oder \u00E4lter wiederherstellen, funktionieren die Login und Voicemail PINs nicht, \
+ weil die PINs mit einem Einweg Algorithmus verschl\u00FCsselt werden, welcher die SIP Domain miteinschließt. Falls Sie diese Funktion aktivieren, \
+ wird ein Versuch unternommen, den Pin zu entschl\u00FCsseln und den Wert des Benutzers zu \u00FCbernehmen. Dies wird ab einer gewissen PIN L\u00E4nge nicht mehr funktionieren, \
+ (L\u00E4nge unten angegeben) oder PINs die einen nicht numerischen Wert enthalten.
+restore.decodePinMaxLen.label=Dekodiere PINs einer gewissen L\u00E4nge
+restore.decodePinMaxLen.description=Wenn PINs dekodiert werden, versuchen Sie es nur, f\u00FCr PINs kürzer als dieser Wert. Hinweis: Werte gr\u00F6ßer 4 \
+ k\u00F6nnen einige Zeit in Anspruch nehmen, abh\u00E4ngig von der CPU und der Nummer der Benutzer.   
+restore.resetPin.label=Setze Voicemail PINs zurück
+restore.resetPin.description=Aktivieren Sie dies, wenn Sie alle Voicemail PINs zur gleichen Zeit wiederherstellen und zur\u00FCcksetzen wollen. PIN muss aus 4 Zahlen oder l\u00E4nger bestehen und am besten aus Nummern von 0 - 9.
+restore.resetPassword.label=Setze Passw\u00F6rter zur\u00FCck
+restore.resetPassword.description=Aktivieren Sie dies wenn Sie alle Benutzer Portal/IM/Anruf Center Passw\u00F6rter zur selben Zeit wiederherstellen und zur\u00FCcksetzen wollen. Password muss 8 Zeichen oder l\u00E4nger sein.
