--- a/sipxpbx/dhcp/dhcp.properties
+++ b/sipxpbx/dhcp/dhcp.properties
@@ -1,23 +1,23 @@
 dhcpd-config.label=DHCP Service
-dhcpd-config.subnet.label=DHCP served subnet
-dhcpd-config.subnet.description= Used to specify the addresses that may be dynamically allocated to clients booting on that subnet. Such addresses are specified using the range declaration. 
-dhcpd-config.netmask.label=Netmask
-dhcpd-config.netmask.description=The netmask should be an IP address or domain name which resolves to the subnet mask of the subnet being described. \
-Used to determine whether any given  IP  address is on the specified subnet
-dhcpd-config.range_begin.label=Lowest IP address in range
-dhcpd-config.range_end.label=Highest IP address in range
+dhcpd-config.subnet.label=DHCP gesteuertes Subnet
+dhcpd-config.subnet.description=Wird dazu benutzt, die Adressen zu spezifizieren, welche Clients dynamisch zugewiesen bekommen wenn Sie sich in das Subnet einklinken. Solche Adressen werden spezifiziert, indem Sie Bereichs Zuweisung benutzen. 
+dhcpd-config.netmask.label=Netzmaske
+dhcpd-config.netmask.description=Die Netzmaske sollte eine IP Adresse oder ein Domain Name sein, welcher zu der Subnetzmaske oder dem Subnet passt, welches beschrieben wurde. \
+Wird dazu benutzt, festzustellen, ob eine gegebene IP Adresse in dem Subnet liegt.
+dhcpd-config.range_begin.label=Niedrigste IP in dem Bereich
+dhcpd-config.range_end.label=H\u00F6chste IP Adresse in dem Bereich
 dhcpd-config.routers.label=Custom Router(s)
-dhcpd-config.routers.description=Only specify this value if you want to override the systems default gateway.
-dhcpd-config.plcm_https_provisioning.label=Polycom HTTPS provisioning
-dhcpd-config.plcm_https_provisioning.description=Enable Polycom phones and other devices that utilize DHCP option 160 to use HTTPS provisioning. Please note that the web SSL certificate MUST signed by a well know Cerificate Authority such as Verisign. 
-dhcpd-config.bria_https_provisioning.label=CounterPath Bria HTTPS provisioning
-dhcpd-config.bria_https_provisioning.description=Enable CounterPath Bria clients and other devices that utilize DHCP option 120 to use HTTPS provisioning. Please note that the web SSL certificate MUST signed by a well know Cerificate such as Verisign.
-dhcpd-config.default_lease_time.label=Default lease time
-dhcpd-config.default_lease_time.description=Length in seconds that will be assigned to a lease if the client requesting the lease does not ask for a specific expiration time.
-dhcpd-config.max_lease_time.label=Maximum lease time
-dhcpd-config.max_lease_time.description=Maximum Length in seconds that will be assigned to a lease if the client requesting the lease asks for a specific expiration time.
-dhcpd-unmanaged.label=Unmanaged Service
-dhcpd-unmanaged.unmanaged.label=Unmanaged DNS service
-dhcpd-unmanaged.unmanaged.description=Enable this option if you don't want DHCP service to be managed by unified communication system \
-(for e.g. generating configuration, automatic restart of services).
+dhcpd-config.routers.description=Tragen Sie hier nur etwas ein, wenn Sie den vom System gegebenen Gateway \u00FCberschreiben wollen.
+dhcpd-config.plcm_https_provisioning.label=Polycom HTTPS Provisionierung
+dhcpd-config.plcm_https_provisioning.description=Aktivieren Sie Polycom Telefone und andere Geräte welche die DHCP Option 160 benutzen um HTTPS Provisionierung zu nutzen. Bitte nehmen Sie zur Kenntnis, dass das Web SSL Zertifikat von einem bekannten Zertifikats Anbieter unterzeichnet sein muss wie z.B. Verisign. 
+dhcpd-config.bria_https_provisioning.label=CounterPath Bria HTTPS Provisionierung
+dhcpd-config.bria_https_provisioning.description=Aktiviere CounterPath Bria clients und andere Ger\u00E4te welche die DHCP Option 120 benutzen um HTTPS Provisionierung zu nutzen. Bitte nehmen Sie zur Kenntnis, dass das Web SSL Zertifikat von einem bekannten Zertifikats Anbieter unterzeichnet sein muss wie z.B. Verisign.
+dhcpd-config.default_lease_time.label=Default lease Zeit
+dhcpd-config.default_lease_time.description=Zeit in Sekunden, welche einem Lease zugewiesen wird, falls der Client, welcher den Lease anfordert nicht nach einer bestimmten Ablaufszeit fragt.
+dhcpd-config.max_lease_time.label=Maximale Lease Zeit
+dhcpd-config.max_lease_time.description=Maximale Dauer in Sekunden, die einem Lease zugewiesen werden, falls der anfragende Client nach einer bestimmten Ablaufsdauer fragt.
+dhcpd-unmanaged.label=Nicht verwalteter Service
+dhcpd-unmanaged.unmanaged.label=Nicht verwalteter DNS Service
+dhcpd-unmanaged.unmanaged.description=Aktivieren Sie diese Option, falls Sie nicht wollen, dass der DHCP Service von dem Unified Kommunikations System verwaltet wird \
+(für z.B. Konfiguration erstellen, automatischer Neustart des Services).
 dhcpd-unmanaged.dhcpd-server.label=DHCP server
